# cookiecutter-pypackage

./: .gitignore  LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.package_directory_name}}/: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md
{{cookiecutter.package_name}}/: .coveragerc  .pylintrc  README.md  pyproject.toml
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __main__.py  additional_module.py
{{cookiecutter.package_name}}/tests/: test_{{cookiecutter.package_name}}.py
{{cookiecutter.project_name}}/: README.md  pyproject.toml
